--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,6 @@ language: csharp
 solution: DataImporterApi.sln
 mono:
   - 3.10.0
+install:
+  - curl -L -o nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
+  - mono nuget.exe restore DataImporterApi.sln
