--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: csharp
 solution: DataImporterApi.sln
 mono:
   - 3.10.0
+before_install:
+  - sudo apt-get update --fix-missing
+  - sudo apt-get install -y libxml2-dev
 install:
   - curl -L -o nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
   - mono nuget.exe restore DataImporterApi.sln
