--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: csharp
-solution: DataImporterApi.sln
-before_install:
-  - sudo apt-get update --fix-missing
-  - sudo apt-get install -y libxml2-dev
+mono: none
+dotnet: 2.2.101
+
 install:
-  - curl -L -o nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
-  - mono nuget.exe restore DataImporterApi.sln
+- dotnet restore
+
+script:
+ - dotnet build
+ - dotnet test Tests/DataImporter.Tests/DataImporter.Tests.csproj
