--- a/Presentation/DataImporterApi/DataImporterApi.csproj
+++ b/Presentation/DataImporterApi/DataImporterApi.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="NSwag.AspNetCore" Version="12.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\DataImporter.Business\DataImporter.Business.csproj" />
+    <ProjectReference Include="..\..\Core\DataImporter.Domain\DataImporter.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
