--- a/Infrastructure/DataImporter.Persistence/DataImporter.Persistence.csproj
+++ b/Infrastructure/DataImporter.Persistence/DataImporter.Persistence.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\DataImporter.Domain\DataImporter.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
