--- a/Presentation/DataImporterApi/appsettings.json
+++ b/Presentation/DataImporterApi/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DataImporterConnection": "Server = (localdb)\\mssqllocaldb; Database = DataImporter; Trusted_Connection = True;Application Name = DataImporter;"
+  } 
 }
