--- a/Core/DataImporter.Business/DataImporter.Business.csproj
+++ b/Core/DataImporter.Business/DataImporter.Business.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Infrastructure\DataImporter.Persistence\DataImporter.Persistence.csproj" />
     <ProjectReference Include="..\DataImporter.Domain\DataImporter.Domain.csproj" />
   </ItemGroup>
 
