--- a/Presentation/DataImporterApi/DataImporterApi.csproj
+++ b/Presentation/DataImporterApi/DataImporterApi.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NSwag.AspNetCore" Version="12.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.0" />
+    <PackageReference Include="NSwag.AspNetCore" Version="13.2.0" />
   </ItemGroup>
 
   <ItemGroup>
